Fix several IE bugs. - Inline editor fields no longer grow forever. (Fixes bug #6) - Pencils now appear on the Description and Testing Done boxes. (Fixes bug #10) - The draft banner no longer looks squished together.

--- a/htdocs/css/common.css
+++ b/htdocs/css/common.css
@@ -181,11 +181,11 @@ ul.errorlist li {
 
 .banner h1 {
   display: inline;
-  margin: 0;
+  margin-right: 0.2em;
   padding: 0;
 }
 
-.banner input[type='submit'] {
+.banner input {
   margin-left: 10px;
 }
 
