--- a/htdocs/css/ie_hacks.css
+++ b/htdocs/css/ie_hacks.css
@@ -8,7 +8,8 @@ img,
   behavior: url("/scripts/pngfix.htc");
 }
 
-#content {
+.banner input {
+  vertical-align: middle;
 }
 
 .box-container {
